Bug #57739
crimson: LogMissingRequest and RepRequest operator<< access possibly invalid req
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
0# 0x00007F3470FEDE3C in /lib64/libc.so.6 1# raise in /lib64/libc.so.6 2# abort in /lib64/libc.so.6 3# 0x00007F3470F8775B in /lib64/libc.so.6 4# 0x00007F3470F96596 in /lib64/libc.so.6 5# boost::intrusive_ptr<MOSDPGUpdateLogMissing>::operator->() const at /home/sam/git-checkouts/ceph/build/boost/include/boost/smart_ptr/intrusive_ptr.hpp:200 6# crimson::osd::LogMissingRequest::print(std::ostream&) const at /home/sam/git-checkouts/ceph/src/crimson/osd/osd_operations/logmissing_request.cc:30