crimson/.../replicated_request,logmissing_request: retain reference to req

Otherwise, operator<< and dump_detail would need to accessing req after
the call to handle_rep_op.

Fixes: https://tracker.ceph.com/issues/57739
Signed-off-by: Samuel Just <sjust@redhat.com>